# Nix.rs

./: .envrc  .gitignore  Cargo.nix  Cargo.toml  README.md  build.nix  cov.sh  crate-hashes.json  default.nix  flake.nix  justfile  nix-proxy.patch  shell.nix  treefmt.toml
capnp-rpc-tokio/: Cargo.toml  build.rs
capnp-rpc-tokio/schema/: byte-stream.capnp
capnp-rpc-tokio/src/: builder.rs  client.rs  graceful.rs  lib.rs  stream.rs
capnp-rpc-tokio/src/serve/: listener.rs  mod.rs
daemon-it/capnp/: Cargo.toml  Justfile  default.nix  run-tests.json
daemon-it/capnp/src/: main.rs
examples/nixrs-nix-store/: Cargo.toml
examples/nixrs-nix-store/src/: serve.rs  verify_path.rs
examples/nixrs-tvix/: Cargo.toml
examples/nixrs-tvix/src/: lib.rs  path_info.rs  store.rs
examples/tester/: Cargo.toml
examples/tester/src/: main.rs
nix-docker-build/: Cargo.toml  README.md
nix-docker-build/src/: cached_store.rs  main.rs
nix-docker-build/ssh/: Dockerfile  authorized_keys  known_hosts  run-ssh.sh  ssh_config  sshd_config  store_test  store_test.pub
nixrs/: Cargo.toml  Justfile  default.nix
nixrs-archive/: Cargo.toml  default.nix
nixrs-archive/src/: case_hack.rs  dump.rs  encoder.rs  lib.rs  parser.rs  restore.rs  test_data.rs
nixrs-capnp/: Cargo.toml  Justfile  build.rs  default.nix  run-tests.json
nixrs-capnp/schema/: byte-stream.capnp  lookup.capnp  nix-daemon.capnp  nix-types.capnp  nixrs.capnp
nixrs-capnp/schema/nixrs/: ip.capnp  nix-daemon.capnp  nix-types.capnp  nixrs.capnp
nixrs-capnp/src/: byte_stream.rs  capnp.rs  client.rs  lib.rs  server.rs
nixrs-capnp/src/convert/: collections.rs  daemon.rs  derivation.rs  derived_path.rs  hash.rs  log.rs  mod.rs  net.rs  realisation.rs  signature.rs  store_path.rs
nixrs-capnp/src/lookup/: mod.rs
nixrs-capnp/src/nix_daemon/: client.rs  mod.rs  server.rs
nixrs-capnp/src/nixrs/: mod.rs  node_access.rs  node_handler.rs  profile.rs  store_path.rs
nixrs-daemon-tests/: Cargo.toml  Justfile  crate.nix  ignore-all.json  mk-daemon-test.nix  tests.nix
nixrs-daemon-tests/proptest-regressions/: proptests.txt
nixrs-daemon-tests/src/: lib.rs  proptests.rs  unittests.rs
nixrs-derive/: Cargo.toml  default.nix
nixrs-derive-tests/: Cargo.toml  default.nix
nixrs-derive-tests/tests/: read_derive.rs  write_derive.rs
nixrs-derive-tests/tests/ui/: deserialize_bad_type.stderr  deserialize_from_missing.rs  deserialize_from_missing.stderr  deserialize_from_store_dir_str_missing.rs  deserialize_from_store_dir_str_missing.stderr  deserialize_from_str_error_not_display.rs  deserialize_from_str_error_not_display.stderr  deserialize_from_str_missing.rs  deserialize_from_str_missing.stderr  deserialize_missing_default.rs  deserialize_missing_default_path.rs  deserialize_remote_missing_attrs.rs  deserialize_try_from_error_not_display.rs  deserialize_try_from_error_not_display.stderr  deserialize_try_from_missing.rs  deserialize_try_from_missing.stderr  parse_bad_default.rs  parse_bad_default_path.stderr  parse_bad_nix.stderr  parse_bad_version.stderr  parse_mising_version.rs  parse_mising_version.stderr
nixrs-derive/src/: de.rs  lib.rs  ser.rs  types.rs
nixrs-derive/src/internal/: attrs.rs  ctx.rs  inputs.rs  mod.rs  symbol.rs
nixrs-derive/tests/: read_derive.rs  ui.rs  write_derive.rs
nixrs-derive/tests/ui/: deserialize_bad_type.rs  deserialize_bad_type.stderr  deserialize_enum_non_exaustive.rs  deserialize_from_missing.stderr  deserialize_from_str_error_not_display.stderr  deserialize_from_str_missing.stderr  deserialize_missing_default.stderr  deserialize_missing_default_path.stderr  deserialize_remote_missing_attrs.rs  deserialize_remote_missing_attrs.stderr  deserialize_try_from_missing.stderr  parse_bad_default.stderr  parse_bad_default_path.rs  parse_bad_nix.rs  parse_bad_version.rs
nixrs-io/: Cargo.toml  default.nix
nixrs-io/src/: cancelled_reader.rs  collection_size.rs  flag_enum.rs  lib.rs
nixrs-io/src/async_sink/: mod.rs  write_all.rs  write_slice.rs  write_string.rs
nixrs-io/src/async_source/: drain.rs  read_padding.rs
nixrs-io/src/framed/: mod.rs
nixrs-legacy/: Cargo.toml  default.nix
nixrs-legacy/src/: hash.rs  lib.rs  num_enum.rs  path.rs  signature.rs  tracing.rs
nixrs-legacy/src/archive/: case_hack.rs  dump.rs  encoder.rs  mod.rs  parser.rs  restore.rs  test_data.rs
nixrs-legacy/src/io/: cancelled_reader.rs  flag_enum.rs  mod.rs  offset_reader.rs  state_display.rs  state_parse.rs  state_print.rs  taken_stream.rs
nixrs-legacy/src/path_info/: nar_info.rs  valid_path_info.rs
nixrs-legacy/src/store/: activity.rs  assert_store.rs  cached_store.rs  derivation.rs  derived_path.rs  error.rs  fail_store.rs  misc.rs  mod.rs  mutex_store.rs  output_spec.rs  path_with_outputs.rs  realisation.rs  settings.rs  store_api.rs
nixrs-legacy/src/store_path/: mod.rs  (+3 more)
nixrs-nix-store/: Cargo.toml
nixrs-nix-store/src/: lib.rs  serve.rs  verify_path.rs
nixrs-ssh-store/: Cargo.toml  default.nix
nixrs-ssh-store/src/: lib.rs  server.rs
nixrs-ssh-store/tests/: id_ed25519  id_ed25519.pub  server.rs  ssh_host_ed25519_key  ssh_host_ed25519_key.pub  ssh_known_hosts
nixrs-store/: Cargo.toml  coverage.sh
nixrs-store/src/: content_address.rs  crypto.rs  derivation.rs  derived_path.rs  error.rs  legacy_local_store.rs  lib.rs  misc.rs  nar_info.rs  path.rs  path_info.rs  path_with_outputs.rs  realisation.rs  store_api.rs
nixrs-tvix/: Cargo.toml
nixrs-tvix/src/: path_info.rs  store.rs
nixrs-util/: Cargo.toml
nixrs-util/src/: base32.rs  cancelled_reader.rs  closure.rs  flag_enum.rs  hash.rs  lib.rs  num_enum.rs  path.rs  state_parse.rs  state_print.rs  taken_reader.rs
nixrs-util/test-data/: test-dir.nar  test-exec.nar  test-text.nar
nixrs/proptest-regressions/: base32.txt
nixrs/src/: base32.rs  flag_enum.rs  hash.rs  lib.rs  log.rs  num_enum.rs  path.rs  realisation.rs  signature.rs  tracing.rs
nixrs/test-data/: AddMultipleToStoreArgs-timeout.json  add_multiple_to_store_fail.json
nixrs/tests/: daemon.proptest-regressions  daemon.rs
taniwha-io/: Cargo.toml
taniwha-io/src/: lending.rs  lib.rs
(+367 files in other folders)
