[workspace]
resolver = "2"
members = [
  "nixrs",
  "nixrs-derive",
  "nixrs-derive-tests",
  "nixrs-legacy",
  "nixrs-ssh-store",
  "nixrs-capnp",
  "examples/nixrs-nix-store",
  "examples/nix-docker-build",
  "examples/tester",
]

[workspace.dependencies]
async-stream = "0.3.6"
bstr = "^1.11.1"
bytes = "^1.10.1"
# criterion = { version = "^0.5", features = ["html_reports"] }
data-encoding = "^2.6.0"
derive_more = "^0.99.18"
futures = "^0.3.31"
hex-literal = "^0.4.1"
libc = "^0.2.155"
md5 = "0.7.0"
num_enum = "^0.7.2"
once_cell = "^1.19.0"
pin-project-lite = "^0.2"
pretty_assertions = "^1.4.0"
proptest = "^1.6.0"
proptest-derive = "^0.5.1"
ring = "^0.17.8"
rstest = "^0.19.0"
smallvec = "^1.13.2"
tempfile = "^3.10.1"
thiserror = "^1.0.49"
tokio = "^1.42"
tokio-test = "0.4.3"
tracing-test = "^0.2.5"
walkdir = "^2.5.0"

# nixrs-io
async-trait = "0.1.50"
base64 = "0.13.0"
byteorder = "1.4.3"
caches = "0.3.0"
hex = "0.4.3"
lazy_static = "1.4.0"
reqwest = "0.12.12"
serde = "^1.0"
serde_json = "^1.0"
serde_with = "3.12.0"
tokio-util = "^0.7.13"
tracing = "0.1.37"
tracing-appender = "0.2.2"
tracing-futures = "0.2.5"
tracing-subscriber = "0.3.16"
url = "2.4.1"
compress-tools = "^0.14.3"

assert_matches = "1.5.0"

# nixrs-capnp
capnp = "^0.20.3"

capnpc = "^0.20.1"
which = "^4.4.0"

# nixrs-derive
proc-macro2 = "1.0.86"
quote = "1.0.36"
syn = "^2.0.98"

trybuild = "1.0.96"

