[package]
name = "capnp-rpc-tokio"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
capnp.workspace = true
capnp-rpc.workspace = true
futures.workspace = true
pin-project-lite.workspace = true
tracing.workspace = true
tower-service = "0.3.3"

[dependencies.tokio-util]
workspace = true
features = ["compat"]

[dependencies.tokio]
workspace = true
features = ["net", "macros", "time", "io-util"]

[build-dependencies]
capnpc.workspace = true
