[package]
name = "nix-docker-build"
version = "0.1.0"
authors = ["Brian Olsen <brian@maven-group.org>"]
edition = "2018"

[dependencies]
anyhow = "1.0.32"
async-trait = "0.1.50"
byteorder = "1.4.3"
derive_more = "0.99.16"
futures = "0.3.6"
env_logger = "^0.7.1"
simplelog = "0.10.0"
thiserror = "1.0.26"
tokio = { version = "^1.0", features = ["full"] }

[dependencies.nixrs-store]
version = "0.1.0"
path = "../nixrs-store"
