[package]
name = "nixrs-archive"
version = "0.1.0"
authors = ["Brian Olsen <brian@maven-group.org>", "Eelco Dolstra <edolstra@gmail.com>"]
edition = "2021"
license = "LGPL-2.1-or-later"

[features]
test = ["dep:proptest", "dep:ring"]

[dependencies]
async-stream = { workspace = true }
bstr = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true }
pin-project-lite = { workspace = true }
proptest = { workspace = true, optional = true }
ring = { workspace = true, optional = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = [ "fs", "io-util" ] }
tokio-util = { workspace = true, features = [ "codec", "io" ] }
tracing = { workspace = true }

[dependencies.nixrs-io]
version = "0.1.0"
path = "../nixrs-io"

[dev-dependencies]
pretty_assertions = { workspace = true }
proptest = { workspace = true }
ring = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = [ "macros", "rt", "rt-multi-thread" ]}