[package]
name = "nixrs-capnp"
version = "0.1.0"
authors = ["Brian Olsen <brian@maven-group.org>"]
edition = "2021"
license = "EUPL-1.2 OR MIT"
build = "build.rs"

[dependencies]
futures = { workspace = true }
nixrs = { path = "../nixrs", features = [ "daemon" ] }
capnp = { workspace = true }

[dependencies.tokio]
workspace = true
features = ["io-util", "macros", "fs"]

[build-dependencies]
capnpc = { workspace = true }
which = { workspace = true }
