# SPDX-FileCopyrightText: 2024 griff
#
# SPDX-License-Identifier: EUPL-1.2 or MIT

[package]
name = "nixrs-derive-tests"
version = "0.1.0"
authors = ["Brian Olsen <brian@maven-group.org>"]
edition = "2024"
license = "EUPL-1.2 OR MIT"


[dev-dependencies]
hex-literal = { workspace = true }
pretty_assertions = { workspace = true }
rstest = { workspace = true }
tokio-test = { workspace = true }
trybuild = { workspace = true }
num_enum = { workspace = true }

[dev-dependencies.nixrs]
version = "0.1.0"
path = "../nixrs"
default-features = false
features = ["test", "daemon-serde"]

[dev-dependencies.nixrs-derive]
version = "0.1.0"
path = "../nixrs-derive"

[dev-dependencies.tokio]
workspace = true
features = ["io-util", "macros"]
