# SPDX-FileCopyrightText: 2024 griff
#
# SPDX-License-Identifier: EUPL-1.2 or MIT

[package]
name = "nixrs-derive"
version = "0.1.0"
authors = ["Brian Olsen <brian@maven-group.org>"]
edition = "2024"
license = "EUPL-1.2 OR MIT"

[lib]
proc-macro = true

[features]
default = []

[dependencies]
proc-macro2 = { workspace = true,  features = ["proc-macro"] }
quote = { workspace = true, features = ["proc-macro"] }

[dependencies.syn]
workspace = true
features = ["clone-impls", "derive", "extra-traits", "full", "parsing", "printing", "proc-macro"]


[dev-dependencies]
hex-literal = { workspace = true }
pretty_assertions = { workspace = true }
rstest = { workspace = true }
tokio-test = { workspace = true }
trybuild = { workspace = true }
num_enum = { workspace = true }

[dev-dependencies.nixrs]
version = "0.1.0"
path = "../nixrs"
default-features = false
features = ["test", "daemon-serde"]

[dev-dependencies.tokio]
workspace = true
features = ["io-util", "macros"]
