[package]
name = "nixrs-io"
version = "0.1.0"
authors = ["Brian Olsen <brian@maven-group.org>", "Eelco Dolstra <edolstra@gmail.com>"]
edition = "2021"
license = "LGPL-2.1-or-later"

[features]
test = ["pretty_assertions", "proptest"]

[dependencies]
async-trait = "0.1.50"
async-stream = "0.3.2"
base64 = "0.13.0"
bstr = "^1.6.2"
byteorder = "1.4.3"
bytes = "^1.4.0"
caches = "0.2.4"
derive_more = "0.99.16"
futures = "0.3"
hex = "0.4.3"
lazy_static = "1.4.0"
pin-project-lite = "0.2"
reqwest = "0.11.20"
ring = "0.16.20"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
smallvec = "1.6.1"
thiserror = "1.0.49"
tokio = {version = "^1.3", features = ["fs", "io-util", "io-std", "process"] }
tokio-util = { version = "0.7.8", features = ["codec", "io-util"] }
tracing = "0.1.37"
tracing-appender = "0.2.2"
tracing-futures = "0.2.5"
tracing-subscriber = { version = "0.3.16", features = ["json"] }
url = "2.4.1"

compress-tools = { version = "^0.14.3", features = ["tokio_support"], optional = true }
md5 = {version = "0.7.0", optional = true }
proptest = {version = "1.2.0", optional = true }
pretty_assertions = {version = "0.7.2", optional = true }

[dev-dependencies]
assert_matches = "1.5.0"
num_enum = "^0.7.2"
tokio = {version = "^1.3", features = ["rt", "macros", "fs", "io-util", "process", "rt-multi-thread"] }
tempfile = "3.2.0"
pretty_assertions = "0.7.2"
proptest = "1.2.0"
