[package]
name = "nixrs-io"
version = "0.1.0"
authors = ["Brian Olsen <brian@maven-group.org>", "Eelco Dolstra <edolstra@gmail.com>"]
edition = "2021"
license = "LGPL-2.1-or-later"

[features]
test = ["dep:pretty_assertions", "dep:proptest"]

[dependencies]
bytes = { workspace = true }
futures = { workspace = true }
pin-project-lite = { workspace = true }
pretty_assertions = { workspace = true, optional = true }
proptest = { workspace = true, optional = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = [ "io-util", "sync" ] }
tracing = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
pretty_assertions = { workspace = true }
ring = { workspace = true }
tokio = { workspace = true, features = [ "macros", "process", "rt", "rt-multi-thread" ]}