[package]
name = "nixrs-legacy"
version = "0.1.0"
authors = ["Brian Olsen <brian@maven-group.org>", "Nix Authors"]
edition = "2021"
license = "LGPL-2.1-or-later"

[features]
default = ["full"]
full = ["md5", "test"]
test = ["dep:pretty_assertions", "dep:proptest"]
slowtests = []

[dependencies]
async-stream = { workspace = true }
async-trait = { workspace = true }
base64 = { workspace = true }
bstr = { workspace = true }
bytes = { workspace = true }
caches = { workspace = true }
compress-tools = { workspace = true, features = ["tokio_support"], optional = true }
derive_more = { workspace = true }
futures = { workspace = true }
hex = { workspace = true }
lazy_static = { workspace = true }
md5 = { workspace = true, optional = true }
pin-project-lite = { workspace = true }
pretty_assertions = { workspace = true, optional = true }
proptest = { workspace = true, optional = true }
reqwest = { workspace = true }
ring = { workspace = true }
serde = { workspace = true, features = [ "derive" ] }
serde_json = { workspace = true }
smallvec = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = [ "fs", "io-util", "macros", "process" ]}
tokio-util = { workspace = true, features = [ "codec", "io", "io-util" ] }
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-futures = { workspace = true }
tracing-subscriber = { workspace = true }
url = { workspace = true }

[dev-dependencies]
assert_matches = { workspace = true }
pretty_assertions = { workspace = true }
proptest = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = [ "rt-multi-thread" ] }

