[package]
name = "nixrs-ssh-store"
version = "0.1.0"
authors = ["Brian Olsen <brian@maven-group.org>"]
edition = "2021"
license = "EUPL-1.2 OR MIT"

[dependencies]
anyhow = "1.0.75"
async-trait = "0.1.50"
futures = "0.3.28"
nixrs = { version = "0.1.0", path = "../nixrs" }
nixrs-legacy = { version = "0.1.0", path = "../nixrs-legacy" }
thrussh = "0.34.0"
thrussh-keys = "0.22.1"
tokio = {version = "^1.3", features = ["fs", "io-util", "rt", "rt-multi-thread"] }
tokio-util = "0.7.8"
tracing = "0.1.37"

[dev-dependencies]
bytes = "^1.6.1"
proptest = "^1.5.0"
proptest-derive = "0.2.0"
rstest = "^0.19.0"
serial_test = "^3.2.0"
tempfile = "^3.10.1"
tokio-test = "0.4.3"
