[package]
name = "nixrs-ssh-store"
version = "0.1.0"
authors = ["Brian Olsen <brian@maven-group.org>"]
edition = "2021"
license = "EUPL-1.2 OR MIT"

[dependencies]
anyhow = "1.0.75"
async-trait = { workspace = true }
futures = { workspace = true }
nixrs = { version = "0.1.0", path = "../nixrs" }
nixrs-legacy = { version = "0.1.0", path = "../nixrs-legacy" }
thrussh = "0.34.0"
thrussh-keys = "0.22.1"
tokio = {workspace = true, features = ["fs", "io-util", "rt", "rt-multi-thread"] }
tokio-util = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
bytes = { workspace = true }
proptest = { workspace = true }
proptest-derive = { workspace = true }
rstest = { workspace = true }
serial_test = "^3.2.0"
tempfile = { workspace = true }
tokio-test = { workspace = true }
