[package]
name = "nixrs-store"
version = "0.1.0"
authors = ["Brian Olsen <brian@maven-group.org>", "Eelco Dolstra <edolstra@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["full"]
full = ["nixrs-util/full", "test"]
test = ["pretty_assertions", "proptest", "nixrs-util/test"]

[dependencies]
async-trait = "0.1.50"
base64 = "0.13.0"
byteorder = "1.4.3"
bytes = "1.0.1"
derive_more = "0.99.16"
futures = "0.3"
lazy_static = "1.4.0"
log = "0.4.14"
pin-project-lite = "0.2"
ring = "0.16.20"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
smallvec = "1.6.1"
thiserror = "1.0.26"
tokio = {version = "^1.3", features = ["fs", "io-util", "process"] }
proptest = {version = "1.0.0", optional = true }
pretty_assertions = {version = "0.7.2", optional = true }
nixrs-util = { version = "0.1.0", path = "../nixrs-util" }
caches = "0.2.4"

[dev-dependencies]
assert_matches = "1.5.0"
tokio = {version = "^1.3", features = ["rt", "macros", "fs", "io-util", "process", "rt-multi-thread"] }
tempfile = "3.2.0"
pretty_assertions = "0.7.2"
proptest = "1.0.0"

