[package]
name = "nixrs-tvix"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-stream = "0.3.2"
async-trait = "0.1.50"
bstr = "*"
bytes = "*"
clap = { version = "4.0", features = ["derive", "env"] }
env_logger = "*"
futures = "0.3"
log = "*"
nixrs-ssh-store = { version = "0.1.0", path = "../nixrs-ssh-store" }
nixrs = { version = "0.1.0", path = "../nixrs" }
thiserror = "1.0.26"
tokio = {version = "^1.3", features = ["fs", "io-util", "io-std", "process"] }
tokio-util = { version = "0.7.8", features = ["codec", "io-util", "io"] }
tonic = "0.8.2"
tracing = "0.1.37"
tracing-log = "0.1.3"
tracing-subscriber = { version = "0.3.16", features = ["json"] }
tvix-castore = { path = "../../tvl/tvix/castore" }
tvix-store = { path = "../../tvl/tvix/store", default-features = false }
url = "2.4.0"

[dev-dependencies]
blake3 = { version = "1.3.1", features = ["rayon", "std"] }
pretty_assertions = "0.7.2"
proptest = "1.0.0"
