[package]
name = "nixrs-util"
version = "0.1.0"
authors = ["Brian Olsen <brian@maven-group.org>", "Eelco Dolstra <edolstra@gmail.com>"]
edition = "2018"

[features]
default = ["full"]
full = ["md5", "test"]
test = ["pretty_assertions", "proptest"]

[dependencies]
async-stream = "0.3.2"
base64 = "0.13.0"
bytes = "1.0.1"
derive_more = "0.99.16"
futures = "0.3"
hex = "0.4.3"
lazy_static = "1.4.0"
log = "0.4.14"
pin-project-lite = "0.2"
smallvec = "1.6.1"
thiserror = "1.0.26"
ring = "0.16.20"
#tokio = {version = "^1.3", features = ["fs", "io-util", "process"] }
tokio = {version = "^1.3", features = ["fs", "io-util"] }
tokio-util = { version = "0.6.7", features = ["codec"] }
md5 = {version = "0.7.0", optional = true }
proptest = {version = "1.0.0", optional = true }
pretty_assertions = {version = "0.7.2", optional = true }

[dev-dependencies]
assert_matches = "1.5.0"
tokio = {version = "^1.3", features = ["rt", "macros", "fs", "io-util", "process", "rt-multi-thread"] }
tempfile = "3.2.0"
pretty_assertions = "0.7.2"
proptest = "1.0.0"

