# SPDX-FileCopyrightText: 2024 griff
#
# SPDX-License-Identifier: EUPL-1.2 or MIT

[package]
name = "nixrs"
version = "0.1.0"
authors = ["Brian Olsen <brian@maven-group.org>"]
edition = "2021"
license = "EUPL-1.2 OR MIT"

[features]
test = ["proptest", "dep:proptest-derive", "nixrs-archive?/test"]
archive = ["dep:nixrs-archive"]
daemon = ["nixrs-derive", "archive", "tokio/rt"]
nixrs-derive = ["dep:nixrs-derive", "dep:libc", "dep:num_enum", "dep:bstr", "dep:futures"]

# Enable all features by default.
default = ["daemon", "nixrs-derive", "test"]

[dependencies]
async-stream = "0.3.6"
bstr = { workspace = true, optional = true }
bytes = { workspace = true }
data-encoding = { workspace = true }
derive_more = { workspace = true }
futures = { workspace = true, optional = true }
libc = { workspace = true, optional = true }
md5 = { workspace = true, optional = true }
num_enum = { workspace = true, optional = true }
parking_lot = { version = "^0.12.3", features = ["arc_lock"] }
pin-project-lite = { workspace = true }
proptest = { workspace = true, optional = true }
proptest-derive = { workspace = true, optional = true }
ring = { workspace = true }
# smallvec = { workspace = true }
thiserror = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }

[dependencies.tokio]
workspace = true
features = ["fs", "io-util", "macros", "net"]

[dependencies.nixrs-derive]
version = "0.1"
path = "../nixrs-derive"
optional = true

[dependencies.nixrs-archive]
version = "0.1"
path = "../nixrs-archive"
optional = true

[dev-dependencies]
# criterion = { workspace = true, features = ["html_reports"] }
hex-literal = { workspace = true }
once_cell = { workspace = true }
pretty_assertions = { workspace = true }
proptest = { workspace = true }
proptest-derive = { workspace = true }
rstest = { workspace = true }
tempfile = { workspace = true }
tracing-test = { workspace = true }
tokio-test = { workspace = true }

[dev-dependencies.nixrs-archive]
version = "0.1"
path = "../nixrs-archive"
features = ["test"]

[dev-dependencies.tokio]
workspace = true
features = ["fs", "io-util", "macros", "process", "rt-multi-thread"]
