# SPDX-FileCopyrightText: 2024 griff
#
# SPDX-License-Identifier: EUPL-1.2 or MIT

[package]
name = "nixrs"
version = "0.1.0"
authors = ["Brian Olsen <brian@maven-group.org>"]
edition = "2024"
license = "EUPL-1.2 OR MIT"

[features]
test = ["proptest", "dep:proptest-derive", "dep:test-strategy", "dep:pretty_assertions"]
archive = ["dep:walkdir", "dep:bstr"]
daemon = ["nixrs-derive", "tokio/rt"]
daemon-serde = []
nixrs-derive = ["archive", "daemon-serde", "dep:nixrs-derive", "dep:libc", "dep:bstr"]
internal = []
full = ["test", "daemon"]

# Nix Experimental Features
xp-dynamic-derivations = []
xp-ca-derivations = []
xp-impure-derivations = []

# Enable all features by default.
default = []

[dependencies]
async-stream = { workspace = true }
bstr = { workspace = true, optional = true }
bytes = { workspace = true, features = ["serde"] }
data-encoding = { workspace = true }
derive_more = { workspace = true }
futures = { workspace = true }
libc = { workspace = true, optional = true }
md5 = { workspace = true, optional = true }
num_enum = { workspace = true }
parking_lot = { version = "^0.12.3", features = ["arc_lock"] }
pin-project-lite = { workspace = true }
pretty_assertions = { workspace = true, optional = true }
proptest = { workspace = true, optional = true }
proptest-derive = { workspace = true, optional = true }
ring = { workspace = true }
# smallvec = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_with = { workspace = true }
test-strategy = {version = "0.4.1", optional = true }
thiserror = { workspace = true }
tokio-util = { workspace = true, features = ["io-util"] }
tracing = { workspace = true }
tracing-futures = { workspace = true }
walkdir = { workspace = true, optional = true }

[dependencies.tokio]
workspace = true
features = ["fs", "io-util", "macros", "net"]

[dependencies.nixrs-derive]
version = "0.1"
path = "../nixrs-derive"
optional = true

[dev-dependencies]
# criterion = { workspace = true, features = ["html_reports"] }
hex-literal = { workspace = true }
once_cell = { workspace = true }
pretty_assertions.workspace = true
proptest = { workspace = true }
proptest-derive = { workspace = true }
rstest = { workspace = true }
rstest_reuse.workspace = true
tempfile = { workspace = true }
test-log = { workspace = true, features = ["trace"] }
test-strategy = { workspace = true }
tokio-test = { workspace = true }

[dev-dependencies.tokio]
workspace = true
features = ["fs", "io-util", "macros", "process", "rt-multi-thread"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]