[package]
name = "nixrs-nix-store"
version = "0.1.0"
authors = ["Brian Olsen <brian@maven-group.org>", "Eelco Dolstra <edolstra@gmail.com>"]
edition = "2024"

[[bin]]
name = "nixrs-store"
test = false
bench = false
path = "src/bin/nixrs_store.rs"

[dependencies]
log = "0.4.14"
nixrs-legacy = { version = "0.1.0", path = "../../nixrs-legacy" }
tokio = {version = "^1.3", features = ["fs", "macros", "io-util", "io-std", "process", "rt", "rt-multi-thread"] }
